--- a/Project/Project2/src/Makefile
+++ b/Project/Project2/src/Makefile
@@ -1,4 +1,9 @@
+obj-m:=pid.o
+KDIR:=/lib/modules/$(shell uname -r)/build
+PWD:=$(shell pwd)
+
 all:
 	gcc -g osh.c -o osh
+	make -C $(KDIR) M=$(PWD) modules
 clean:
-	rm *.o -f
+	rm *.o *.ko *.mod.c Modules.symvers modules.order -f
