--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,9 +48,8 @@
     ],
     "latex-workshop.latex.recipes": [
         {
-            "name": "pdflatex*2",
+            "name": "pdflatex",
             "tools": [
-                "pdflatex",
                 "pdflatex",
             ]
         },
