--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -102,7 +102,10 @@
         "schedulers.h": "c",
         "list.h": "c",
         "semaphore.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "algorithm": "c",
+        "iterator": "c",
+        "xutility": "c"
     },
     "launch": {
 
@@ -170,5 +173,6 @@
         "**/linux-5.11.2/linux-5.11.2/arch/um": true,
         "**/linux-5.11.2/linux-5.11.2/arch/unicore32": true,
         "**/linux-5.11.2/linux-5.11.2/arch/xtensa": true
-    }
+    },
+    "latex-workshop.latex.autoBuild.run": "onSave"
 }
