--- a/Project/Project8/src/Makefile
+++ b/Project/Project8/src/Makefile
@@ -1,8 +1,8 @@
 CC=gcc
 CFLAGS=-Wall
 
-all: addext.o memory.o pagetab.o vmm.o 
-	$(CC) $(CFLAGS) -o vmm addext.o memory.o pagetab.o vmm.o
+all: addext.o memory.o pagetab.o lru.o tlb.o vmm.o 
+	$(CC) $(CFLAGS) -o vmm addext.o memory.o pagetab.o lru.o tlb.o vmm.o
 
 addext.o: addext.c
 	$(CC) $(CFLAGS) -c addext.c
@@ -15,6 +15,12 @@ memory.o: memory.c
 
 pagetab.o: pagetab.c
 	$(CC) $(CFLAGS) -c pagetab.c
+
+lru.o: lru.c
+	$(CC) $(CFLAGS) -c lru.c
+
+tlb.o: tlb.c
+	$(CC) $(CFLAGS) -c tlb.c
 
 clean:
 	rm -rf *.o
